k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: clean-dev
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: http
          protocol: TCP
          name: http
    selector:
        app: clean-dev
